--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             margin: 0;
         }
         </style>
-        <title>database_gis_sda (QFieldCloud)</title>
+        <title>WebGIS SDA Ciamis</title>
     </head>
     <body>
         <div id="map">
