--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 return this._div;
             };
             title.update = function () {
-                this._div.innerHTML = '<h2>database_gis_sda (QFieldCloud)</h2>';
+                this._div.innerHTML = '<h2>WebGIS SDA Ciamis</h2>';
             };
             title.addTo(map);
         var osmGeocoder = new L.Control.Geocoder({
